--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "pytest>=8.3.2",
     "pyarrow>=17.0.0",
+    "pandas>=2.2.2",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
